--- a/index.html
+++ b/index.html
@@ -394,9 +394,9 @@
         <img src="resources/ceylon-logo-24.png" title="Ceylon">
         <img src="resources/chapel-logo-24.png" title="Chapel">
         <img src="resources/clojure-logo-24.png" title="Clojure">
+        <img src="resources/coffeescript-logo-24.png" title="CoffeeScript">
         <img src="resources/cpp-logo-24.png" title="C++">
         <img src="resources/csharp-logo-24.png" title="C#">
-        <img src="resources/coffeescript-logo-24.png" title="CoffeeScript">
         <img src="resources/d-logo-24.png" title="D">
         <img src="resources/dart-logo-24.png" title="Dart">
         <img src="resources/elixir-logo-24.png" title="Elixir">
@@ -406,9 +406,9 @@
         <img src="resources/falcon-logo-24.png" title="Falcon">
         <img src="resources/fsharp-logo-24.png" title="F#">
         <img src="resources/go-logo-24.png" title="Go">
+        <img src="resources/haskell-logo-24.png" title="Haskell">
         <img src="resources/idris-logo-24.png" title="Idris">
         <img src="resources/io-logo-24.png" title="Io">
-        <img src="resources/haskell-logo-24.png" title="Haskell">
         <img src="resources/java-logo-24.png" title="Java">
         <img src="resources/javascript-logo-24.png" title="JavaScript">
         <img src="resources/julia-logo-24.png" title="Julia">
@@ -418,7 +418,7 @@
         <img src="resources/lolcode-logo-24.png" title="LOLCODE">
         <img src="resources/lua-logo-24.png" title="Lua">
         <img src="resources/mercury-logo-24.png" title="Mercury">
-        <img src="resources/nasm-logo-24.png" title="nasm">
+        <img src="resources/nasm-logo-24.png" title="NASM">
         <img src="resources/nemerle-logo-24.png" title="nemerle">
         <img src="resources/nim-logo-24.png" title="Nim">
         <img src="resources/ocaml-logo-24.png" title="OCaml">
@@ -434,6 +434,8 @@
         <img src="resources/smalltalk-logo-24.png" title="Smalltalk">
         <img src="resources/sml-logo-24.png" title="Standard ML">
         <img src="resources/swift-logo-24.png" title="Swift">
+        <img src="resources/tcl-logo-24.png" title="Tcl">
+        <img src="resources/whiley-logo-24.png" title="Whiley">
       </div>
     </div>
   </body>
