--- a/overviews.html
+++ b/overviews.html
@@ -253,9 +253,9 @@
       var currentIndex = 0;
       addEventListener("keydown", function(event) {
         if (event.keyCode === 38) {
-          show(currentIndex ? currentIndex - 1 : langs.length - 1);
+          show(currentIndex ? currentIndex - 1 : 0);
         } else if (event.keyCode === 40) {
-          show((currentIndex + 1) % langs.length);
+          show(Math.min(currentIndex + 1, langs.length - 1));
         }
       });
       var sidebar = document.getElementById("sidebar");
@@ -287,6 +287,7 @@
         langs[currentIndex].element.style.backgroundColor = 'black';
         currentIndex = indexToShow;
         langs[currentIndex].element.style.backgroundColor = '#333';
+        langs[currentIndex].element.scrollIntoView(false);
       };
       show(0);
     </script>
