Tidy up the index page

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
       <p class="summary">This text covers the standard programming language
       concepts, including binding, scope, typing, parameterization, modularity,
-      concurrency, and meta&shy;programming, not with a list of explanations
+      concurrency, and meta&shy;programming&mdash;not with a list of explanations
       of each topic, but rather within the context of whole-language overviews
       with plenty of runnable example programs. We aim to help developers
       learn a bit of theory, and introduce students to a number of modern
@@ -178,8 +178,8 @@
         and operator overloading, and see coroutines for the first time.
 
         <dt>Chapter 4 Python
-        <dd>Our first language with a sophisticated type system, where types
-        are objects within the language, and the programmer can
+        <dd>Our first language with a complex type system: types
+        are first-class objects within the language and the programmer can
         define new types. This chapter introduces supertype-subtype
         relationships, multiple inheritance, keyword arguments,
         pass-by-sharing, special methods, iterators and generators,
@@ -188,7 +188,7 @@
         <dt>Chapter 5 Ruby
         <dd>Object-orientation and much more within an overview of the language
         billed as &ldquo;A programmer&rsquo;s best friend.&rdquo; We define
-        messaging, encapsulation, (class-based) inheritance, and polymorphism, and look
+        messaging, encapsulation, class-based inheritance, and polymorphism, and look
         at access controls and singleton classes. Ruby&rsquo;s blocks and
         mixins bring up some new issues, as does the language&rsquo;s extensive
         metaprogramming capabilities.
@@ -197,7 +197,7 @@
         <dd>A tour of the new dynamic language for scientific computing where
         we encounter abstract types, parametric types, sum and product types,
         and the notions of covariance, contravariance, and invariance. We see
-        polymorphism with multiple dispatch (differing from the single-receiver
+        polymorphism with multiple dispatch (which differs from the single-receiver
         forms of previous languages), a metaprogramming facility with
         hygienic macros, and language support for parallel and distributed
         computing.
@@ -206,7 +206,7 @@
         <dd>An exploration of our first statically-typed language with coverage
         of classes, modifiers, interfaces, generics, optionals (and their
         relationship to the billion dollar mistake), reflection,
-        and quite a lot about threads and synchronization.
+        and quite a bit about threads and synchronization.
 
         <dt>Chapter 8 Clojure
         <dd>A tour of the mostly-functional, modern dialect of Lisp, that
@@ -235,13 +235,12 @@
         loop-free, matching-oriented programming with immutable data. But what
         makes Erlang Erlang is its messaging system based on processes
         without shared memory, and its acheivement of high availability
-        through a philosophy known, perhaps surprisingly, as &ldquo;Let it
-        Crash.&rdquo;
+        through a philosophy known as &ldquo;Let it Crash.&rdquo;
 
         <dt>Chapter 11 Go
         <dd>Another language emphasizing distributed programming via message
         passing, but unlike Erlang, places the focus on channels rather than
-        named processes. Our tour introduces a few other concepts, too,
+        on named processes. Our tour introduces a few other concepts,
         such as multiple-value function returns, defer statements, explicit pointers,
         slices, and panics. We examine Go&rsquo;s level of type inference, which
         falls somewhere in between Java&rsquo;s and Elm&rsquo;s.
@@ -262,7 +261,7 @@
         Prolog, K, Io, Factor, Brainfuck, Befunge, LOLCODE, and nasm (an assembly
         language for the x86 architecture). This chapter is by no means and
         afterthought or an aside; the sections on Rust and C, in particular,
-        have a bit to say about dealing with explicit pointers without
+        discuss how one deals with explicit pointers without
         a garbage collector, while other sections introduce new programming
         paradigms not covered in the twelve featured language chapters.
 
@@ -334,7 +333,8 @@
         <li><a href="http://hyperpolyglot.org/">Hyperpolyglot</a>
       </ul>
 
-      <p>In addition, you might want to visit a few languages not covered in the book:</p>
+      <p>In addition, you might want to visit a few languages not covered in the book.
+      Here are some of our favorites:</p>
 
       <p style="text-align:center">
         <a href="https://github.com/damelang/nile">Nile</a> &bull;
