Add Roy language

--- a/index.html
+++ b/index.html
@@ -427,6 +427,7 @@
         <img src="resources/python-logo-24.png" title="Python">
         <img src="resources/r-logo-24.png" title="R">
         <img src="resources/racket-logo-24.png" title="Racket">
+        <img src="resources/roy-logo-24.png" title="Roy">
         <img src="resources/ruby-logo-24.png" title="Ruby">
         <img src="resources/rust-logo-24.png" title="Rust">
         <img src="resources/scala-logo-24.png" title="Scala">
