--- a/overviews.html
+++ b/overviews.html
@@ -222,6 +222,9 @@
           i: 'racket', n: 'Racket', h: 'https://racket-lang.org/',
         },
         {
+          i: 'roy', n: 'Roy', h: 'http://roy.brianmckenna.org/',
+        },
+        {
           i: 'ruby', n: 'Ruby', h: 'https://www.ruby-lang.org/en/',
         },
         {
