Add a flyover message for the book cover

--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
   <body>
     <div class="container">
       <div class="bookcover">
-        <a href="https://www.crcpress.com/Programming-Language-Explorations/Toal-Rivera-Schneider-Choe/p/book/9781498738460"><img
-        src="resources/book-cover.png" alt="book cover"></a>
+        <a href="https://www.crcpress.com/Programming-Language-Explorations/Toal-Rivera-Schneider-Choe/p/book/9781498738460" title="Did you know that the colored squares holding the names of the various languages on the cover of the book use the GitHub color for each language?"><img src="resources/book-cover.png" alt="book cover"></a>
       </div>
 
 
